--- a/src/css/patterns/modal.scss
+++ b/src/css/patterns/modal.scss
@@ -36,6 +36,8 @@
   margin: 25vh auto auto;
   border-radius: 4px;
   bottom: auto;
+  height: auto;
+  width: 90%;
 }
 
 .dialog figure > img {
@@ -57,8 +59,6 @@
 
   .modal .dialog.small {
     width: $width-min-med;
-    // height: $width-min-sml;
-    // margin: 12em auto auto;
   }
 
   .modal .dialog.center {
